tests/ui/stability-attribute/renamed_feature.rs
#![feature(try_trait)] //~ ERROR unknown feature `try_trait`

fn main() {}
